Acrescentado um parágrafo

--- a/navbar.html
+++ b/navbar.html
@@ -166,6 +166,7 @@
         <!--Cards com produtos belkit-->
         <div> 
        <h1>Produtos Belkit</h1>
+       <p>Os melhores preços que cabem no seu bolso.</p>
       </div>
        
       
